--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "cors": "2.8.5",
     "express": "4.18.2",
     "jsonwebtoken": "9.0.0",
-    "sequelize": "^6.31.1",
-    "sqlite3": "^5.1.6"
+    "morgan": "1.10.0",
+    "sequelize": "6.31.1",
+    "sqlite3": "5.1.6"
   },
   "devDependencies": {
     "prettier": "2.8.8"
