--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "author": "arvindkalra",
+  "author": "arvindkalra08",
   "license": "ISC",
   "dependencies": {
     "ajv": "8.12.0",
